# aiap-rag-chatbot

./: .gitignore  Containerfile-fastapi  Containerfile-gradio  README.md  pyproject.toml  rag-app-compose.yml  run.sh
conf/: config.yaml
src/: app_api.py  app_backend.py  app_frontend.py  preprocess_corpus.py  rag_evaluator.py
